test 4th page again. I need local jekyll aaaahhhhhh

--- a/fourth-page.html
+++ b/fourth-page.html
@@ -1,7 +1,6 @@
 ---
 layout: default
-title: test fourth page
-description: About Mission 2000 test 4th
+title: 4th page test
+permalink: /fourth-page/
 ---
-
 <h1>HI test fourth page</h1>
