--- a/searchTool.html
+++ b/searchTool.html
@@ -32,7 +32,7 @@ permalink: /search-interface/
 </head>
 
 <body>
-    <p id=instructions>Please use the search bar below to search for a result</p>
+    <p id="instructions">Please use the search bar below to search for a result</p>
 
     <h1>Search JSON Data</h1>
     <input type="text" id="searchInput" placeholder="Type to search..." />
