--- a/searchTool.html
+++ b/searchTool.html
@@ -32,12 +32,11 @@ permalink: /search-interface/
 </head>
 
 <body>
-    <p id="instructions">Please use the search bar below to search for a result</p>
 
     <h1>Search JSON Data</h1>
     <input type="text" id="searchInput" placeholder="Type to search..." />
     <button id="searchButton">Search</button>
     <div id="results"></div>
-    <script src="./processSearch.js"></script>
+    <script src="processSearch.js"></script>
 </body>
 </html>
