--- a/searchTool.html
+++ b/searchTool.html
@@ -31,6 +31,6 @@ permalink: /search-interface/
     <input type="text" id="searchInput" placeholder="Type to search..." />
     <button id="searchButton">Search</button>
     <div id="results"></div>
-    <script src="../processSearch.js"></script>
+    <script src="search-interface/processSearch.js"></script>
 </body>
 </html>
