--- a/searchTool.html
+++ b/searchTool.html
@@ -29,7 +29,7 @@ permalink: /search-interface/
 
 <body>
     <h4>Search JSON Data</h4>
-    <p class="instructions">Note: The interface is currently under construction. NPS data is not yet connected. Currently, only one test data is available. To test the interface, type "Ursula" in the search bar.</p>
+    <p class="instructions">NOTE: The interface is currently under construction. NPS data is not yet connected. Currently, only one test data is available. To test the interface, type "Ursula" in the search bar. The test result display after typing "Ursula" will not be what the final version will look like. The current version is just to see if the data architecture is connected or not.</p>
     <br>
     <input type="text" id="searchInput" placeholder="Type to search..." />
     <button id="searchButton">Search</button>
