updated database and search interface

--- a/searchTool.html
+++ b/searchTool.html
@@ -31,7 +31,7 @@ permalink: /search-interface/
     <h4>Search JSON Data</h4>
     <p class="instructions">NOTE: The interface is currently under construction. NPS data is not yet connected. Currently, only one test data is available. To test the interface, type "Ursula" in the search bar. The test result display after typing "Ursula" will not be what the final version will look like. The current version is just to see if the data architecture is connected or not.</p>
     <br>
-    <input type="text" id="searchInput" placeholder="Type to search..." />
+    <input type="text" id="searchInput" placeholder="Enter event place..." />
     <button id="searchButton">Search</button>
     <div id="results"></div>
     <script src="../processSearch.js"></script>
