--- a/searchTool.html
+++ b/searchTool.html
@@ -16,13 +16,28 @@ permalink: /search-interface/
             font-family: Arial, sans-serif;
             margin: 20px;
         }
+
         #results {
             margin-top: 20px;
         }
+
         .result-item {
             border: 1px solid #ccc;
             padding: 10px;
             margin-bottom: 10px;
+        }
+
+        .caret {
+            cursor: pointer;
+            margin-right: 0.5em;
+            font-weight: bold;
+            user-select: none;
+        }
+
+        .person-details {
+            margin-left: 1em;
+            font-size: 0.9em;
+            display: none;
         }
     </style>
 </head>
