--- a/searchPage/searchTool.html
+++ b/searchPage/searchTool.html
@@ -10,36 +10,7 @@ permalink: /search-interface/
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JSON Search Interface</title>
-    <link rel="stylesheet" href="{{ '/defaultStyle.css' | relative_url }}">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-
-        #results {
-            margin-top: 20px;
-        }
-
-        .result-item {
-            border: 1px solid #ccc;
-            padding: 10px;
-            margin-bottom: 10px;
-        }
-
-        .caret {
-            cursor: pointer;
-            margin-right: 0.5em;
-            font-weight: bold;
-            user-select: none;
-        }
-
-        .person-details {
-            margin-left: 1em;
-            font-size: 0.9em;
-            display: none;
-        }
-    </style>
+    <link rel="stylesheet" href="{{ '/searchToolPage.css' | relative_url }}">
 </head>
 
 <body>
