--- a/searchPage/searchTool.html
+++ b/searchPage/searchTool.html
@@ -20,6 +20,6 @@ permalink: /search-interface/
     <input type="text" id="searchInput" placeholder="Enter event place..." />
     <button id="searchButton">Search</button>
     <div id="results"></div>
-    <script src="processSearch.js"></script>
+    <script src="{{ 'search-interface/processSearch.js' | relative_url }}"></script>
 </body>
 </html>
