--- a/searchPage/searchTool.html
+++ b/searchPage/searchTool.html
@@ -10,7 +10,7 @@ permalink: /search-interface/
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JSON Search Interface</title>
-    <link rel="stylesheet" href="{{ 'searchToolPage.css' | relative_url }}">
+    <link rel="stylesheet" href="{{ 'searchPage/searchToolPage.css' | relative_url }}">
 </head>
 
 <body>
@@ -20,6 +20,6 @@ permalink: /search-interface/
     <input type="text" id="searchInput" placeholder="Enter event place..." />
     <button id="searchButton">Search</button>
     <div id="results"></div>
-    <script src="{{ 'search-interface/processSearch.js' | relative_url }}"></script>
+    <script src="{{ 'searchPage/processSearch.js' | relative_url }}"></script>
 </body>
 </html>
