--- a/searchPage/searchTool.html
+++ b/searchPage/searchTool.html
@@ -9,13 +9,16 @@ permalink: /search-interface/
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JSON Search Interface</title>
+    <title>Search Interface</title>
     <link rel="stylesheet" href="{{ 'searchPage/searchToolPage.css' | relative_url }}">
 </head>
 
 <body>
-    <h4>Search JSON Data</h4>
-    <p class="instructions">NOTE: The interface is currently under construction. NPS data is not yet connected. Currently, only one test data is available. To test the interface, type "Ursula" in the search bar. The test result display after typing "Ursula" will not be what the final version will look like. The current version is just to see if the data architecture is connected or not.</p>
+    <h4>Search Data</h4>
+    <p class="instructions">NOTE: There are a few ways to use this interface: <br>
+        1. Search by Event Place (e.g. Magdalena, etc.) and optionally filter by year <br>
+        2. (Under development) Search by Person name and optionally filter by year <br>
+        3. (Under development) Search by Event Type (e.g. baptism events, marriage events, etc.) and optionally filter by year.</p>
     <br>
     <label for="searchInput">Select Event Place:</label>
     <select id="searchInput">
@@ -258,10 +261,13 @@ permalink: /search-interface/
         <option value="Ímuris, from las Palmillas">Ímuris, from las Palmillas</option>
         <option value="Ïmuris">Ïmuris</option>
     </select>
-
-    <label for="searchYear">Enter Year:</label>
+    <br>
+    <br>
+    <label for="searchYear">Enter Year (leave blank if wish to search an event in all years):</label>
     <input type="text" id="searchYear" placeholder="e.g., 1702" />
     <button id="searchButton">Search</button>
+
+    <hr>
 
     <div id="results"></div>
 
