--- a/searchPage/searchTool.html
+++ b/searchPage/searchTool.html
@@ -20,8 +20,8 @@ permalink: /search-interface/
         2. (Under development) Search by Person name and optionally filter by year <br>
         3. (Under development) Search by Event Type (e.g. baptism events, marriage events, etc.) and optionally filter by year.</p>
     <br>
-    <label for="searchInput">Select Event Place:</label>
-    <select id="searchInput">
+    <label for="searchPlace">Select Event Place:</label>
+    <select id="searchPlace">
         <option value="">-- Choose a Location --</option>
         <option value="Arizpe">Arizpe</option>
         <option value="A little above Guevavi">A little above Guevavi</option>
