--- a/searchPage/searchTool.html
+++ b/searchPage/searchTool.html
@@ -265,7 +265,9 @@ permalink: /search-interface/
     <br>
     <label for="searchYear">Enter Year (leave blank if wish to search an event in all years):</label>
     <input type="text" id="searchYear" placeholder="e.g., 1702" />
-    <button id="searchButton">Search</button>
+    <br>
+    <br>
+    <button id="searchButton">Search by Event Place and/or Year</button>
 
     <hr>
 
