--- a/searchPage/searchTool.html
+++ b/searchPage/searchTool.html
@@ -21,7 +21,8 @@ permalink: /search-interface/
         Search Option 1. Search by Event Place (e.g. Magdalena, etc.) and optionally filter by year of the event. <br>
         Search Option 2. Search by Person name and optionally filter by year. <br>
         Search Option 3. Search by Event Type (e.g. baptism events, marriage events, etc.) and optionally filter by year of the event. <br>
-        Search Option 4. Search by a person's Tribal Affiliation and optionally filter by year of the event the person is associated with.</p>
+        Search Option 4. Search by a person's Tribal Affiliation and optionally filter by year of the event the person is associated with.<br>
+        Search option 5. (under development) combined search. </p>
 
     <div id="searchGrid">
         <div class="searchBox">
